outputs_20260408-010853-2127533d/codegen/production/build_logs/compiler_stderr.log
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_73bzvv8p\src\gtm_tom_3_phase_inverter_pwm.c:11:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_73bzvv8p\include/gtm_tom_3_phase_inverter_pwm.h:33:6: error: expected identifier or '(' before 'for'
   33 | void for(void);
      |      ^~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_73bzvv8p\src\gtm_tom_3_phase_inverter_pwm.c: In function 'initGtmTom3phInv':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_73bzvv8p\src\gtm_tom_3_phase_inverter_pwm.c:41:50: error: 'IfxGtm_TOM1_0_TOUT0_P02_0_OUT' undeclared (first use in this function)
   41 | #define PHASE_U_HS_TOUT   ((IfxGtm_Pwm_ToutMap*)&IfxGtm_TOM1_0_TOUT0_P02_0_OUT)
      |                                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_73bzvv8p\src\gtm_tom_3_phase_inverter_pwm.c:94:43: note: in expansion of macro 'PHASE_U_HS_TOUT'
   94 |     outputCfg[0].pin                    = PHASE_U_HS_TOUT;
      |                                           ^~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_73bzvv8p\src\gtm_tom_3_phase_inverter_pwm.c:41:50: note: each undeclared identifier is reported only once for each function it appears in
   41 | #define PHASE_U_HS_TOUT   ((IfxGtm_Pwm_ToutMap*)&IfxGtm_TOM1_0_TOUT0_P02_0_OUT)
      |                                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_73bzvv8p\src\gtm_tom_3_phase_inverter_pwm.c:94:43: note: in expansion of macro 'PHASE_U_HS_TOUT'
   94 |     outputCfg[0].pin                    = PHASE_U_HS_TOUT;
      |                                           ^~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_73bzvv8p\src\gtm_tom_3_phase_inverter_pwm.c:42:50: error: 'IfxGtm_TOM1_0N_TOUT7_P02_7_OUT' undeclared (first use in this function)
   42 | #define PHASE_U_LS_TOUT   ((IfxGtm_Pwm_ToutMap*)&IfxGtm_TOM1_0N_TOUT7_P02_7_OUT)
      |                                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_73bzvv8p\src\gtm_tom_3_phase_inverter_pwm.c:95:43: note: in expansion of macro 'PHASE_U_LS_TOUT'
   95 |     outputCfg[0].complementaryPin       = PHASE_U_LS_TOUT;
      |                                           ^~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_73bzvv8p\src\gtm_tom_3_phase_inverter_pwm.c:43:50: error: 'IfxGtm_TOM1_1_TOUT1_P02_1_OUT' undeclared (first use in this function)
   43 | #define PHASE_V_HS_TOUT   ((IfxGtm_Pwm_ToutMap*)&IfxGtm_TOM1_1_TOUT1_P02_1_OUT)
      |                                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_73bzvv8p\src\gtm_tom_3_phase_inverter_pwm.c:102:43: note: in expansion of macro 'PHASE_V_HS_TOUT'
  102 |     outputCfg[1].pin                    = PHASE_V_HS_TOUT;
      |                                           ^~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_73bzvv8p\src\gtm_tom_3_phase_inverter_pwm.c:44:50: error: 'IfxGtm_TOM1_12_TOUT4_P02_4_OUT' undeclared (first use in this function)
   44 | #define PHASE_V_LS_TOUT   ((IfxGtm_Pwm_ToutMap*)&IfxGtm_TOM1_12_TOUT4_P02_4_OUT)
      |                                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_73bzvv8p\src\gtm_tom_3_phase_inverter_pwm.c:103:43: note: in expansion of macro 'PHASE_V_LS_TOUT'
  103 |     outputCfg[1].complementaryPin       = PHASE_V_LS_TOUT;
      |                                           ^~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_73bzvv8p\src\gtm_tom_3_phase_inverter_pwm.c:45:50: error: 'IfxGtm_TOM1_5_TOUT2_P02_2_OUT' undeclared (first use in this function)
   45 | #define PHASE_W_HS_TOUT   ((IfxGtm_Pwm_ToutMap*)&IfxGtm_TOM1_5_TOUT2_P02_2_OUT)
      |                                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_73bzvv8p\src\gtm_tom_3_phase_inverter_pwm.c:110:43: note: in expansion of macro 'PHASE_W_HS_TOUT'
  110 |     outputCfg[2].pin                    = PHASE_W_HS_TOUT;
      |                                           ^~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_73bzvv8p\src\gtm_tom_3_phase_inverter_pwm.c:46:50: error: 'IfxGtm_TOM1_13_TOUT5_P02_5_OUT' undeclared (first use in this function)
   46 | #define PHASE_W_LS_TOUT   ((IfxGtm_Pwm_ToutMap*)&IfxGtm_TOM1_13_TOUT5_P02_5_OUT)
      |                                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_73bzvv8p\src\gtm_tom_3_phase_inverter_pwm.c:111:43: note: in expansion of macro 'PHASE_W_LS_TOUT'
  111 |     outputCfg[2].complementaryPin       = PHASE_W_LS_TOUT;
      |                                           ^~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_73bzvv8p\src\gtm_tom_3_phase_inverter_pwm.c: At top level:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_73bzvv8p\src\gtm_tom_3_phase_inverter_pwm.c:241:6: error: expected identifier or '(' before 'for'
  241 | void for(void)                   { /* no-op for unit test harness */ }
      |      ^~~

In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_73bzvv8p\test\test_gtm_tom_3_phase_inverter_pwm.c:3:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_73bzvv8p\include/gtm_tom_3_phase_inverter_pwm.h:33:6: error: expected identifier or '(' before 'for'
   33 | void for(void);
      |      ^~~
